syntax = "proto3";

option java_package = "com.san.kir.manger";
option java_multiple_files = true;

message ShikimoriAuth {
    bool is_login = 1;

    message Token {
        string access_token = 1;
        string token_type = 2;
        int64 expires_in = 3;
        string refresh_token = 4;
        string scope = 5;
        int64 created_at = 6;
    }

    Token token = 2;

    message Whoami {
        string nickname = 1;
        string avatar = 2;
        int64 id = 3;
    }

    Whoami whoami = 3;
}
